2017-03-14  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* misc/network.h (struct host_info): Remove vhosts element.

	* misc/network.c (host_info_init): Remove vhosts parameter.
	(host_init_free): Don't free vhosts element.

	* nasl/nasl.c (init): Adjust function call.

	* src/attack.c (init_host_kb): Get vhosts and vhosts_ip values directly
	from prefs instead of hostinfos.
	(attack_start): Adjust host_info_init() call.

2017-03-14  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* misc/plugutils.c (plug_get_key): Set the SIGTERM handler to _exit in
	forked child case.

2017-03-13  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/charcnv.c (void strupper_m_ntlmssp, push_ascii_ntlmssp):
	Delete functions.

	* nasl/proto.h (push_ascii_ntlmssp) Remove function prototype.

2017-03-13  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/nasl_crypto.c (nasl_ntlm_response): New variable pass_len
	to be passed to ntlmssp_genauth_ntlm().
	(nasl_ntlm2_response): New variable pass_len to be passed to
	ntlmssp_genauth_ntlm2().

	* nasl/ntlmssp.c (ntlmssp_genauth_ntlm2, ntlmssp_genauth_ntlm):
	Add argument pass_len to be passed to E_deshash_ntlmssp().

	* nasl/ntlmssp.h (ntlmssp_genauth_ntlm2, ntlmssp_genauth_ntlm):
	Add argument pass_len.

	* nasl/smb_crypt.c (E_deshash_ntlmssp) Add argument pass_len.
	replace push_ascii_ntlmssp with g_utf8_strup, since it was used
	only to uppercase the password.

	* nasl/smb_crypt.h (E_deshash_ntlmssp): Add argument pass_len in
	prototype.

2017-03-10  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/pluginscheduler.c (plugins_scheduler_next): Simplify checks for
	returning PLUG_RUNNING.

2017-03-08  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/nasl_crypto.c (tls_prf): Replace the seed with
	the concatenation of the label and the seed.

2017-03-06  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* src/pluginscheduler.c (plugin_add): Change the message