@@ -672,7 +672,15 @@ nasl_rsa_public_encrypt (lex_ctxt * lexic)
   gcry_mpi_t e = NULL, n = NULL, dt = NULL;
   gcry_sexp_t key = NULL, data = NULL, encrypted = NULL;
   gcry_error_t err;
+  char *pad = (char *) get_str_var_by_name (lexic, "pad");
 
+  if (pad == NULL)
+    {
+      nasl_perror (lexic,
+                   "Syntax : rsa_public_encrypt(data:<d>,"
+                   "n:<n>, e:<e>, pad:<pad>)");
+      return NULL;
+    }
   retc = alloc_tree_cell (0, NULL);
   retc->type = CONST_DATA;
 
@@ -690,7 +698,11 @@ nasl_rsa_public_encrypt (lex_ctxt * lexic)
       print_gcrypt_error (lexic, "gcry_sexp_build pubkey", err);
       goto fail;
     }
-  err = gcry_sexp_build (&data, NULL, "(data (flags pkcs1) (value %m))", dt);
+
+  if (strcmp (pad,"TRUE") == 0)
+    err = gcry_sexp_build (&data, NULL, "(data (flags pkcs1) (value %m))", dt);
+  else
+    err = gcry_sexp_build (&data, NULL, "(data (flags raw) (value %m))", dt);
   if (err)
     {
       print_gcrypt_error (lexic, "gcry_sexp_build data", err);
@@ -704,9 +716,17 @@ nasl_rsa_public_encrypt (lex_ctxt * lexic)
       goto fail;
     }
 
-  if (set_retc_from_sexp (retc, encrypted, "a") >= 0
-      && strip_pkcs1_padding (retc) >= 0)
-    goto ret;
+  if (strcmp (pad,"TRUE") == 0)
+    {
+      if (set_retc_from_sexp (retc, encrypted, "a") >= 0 &&
+        strip_pkcs1_padding (retc) >= 0)
+      goto ret;
+    }
+  else
+    {
+      if (set_retc_from_sexp (retc, encrypted, "a") >= 0)
+        goto ret;
+    }
 
 fail:
   retc->size = 0;
