@@ -368,7 +368,8 @@ static init_func libfuncs[] = {
   {"bn_cmp", nasl_bn_cmp, 0, {"key1", "key2", NULL}},
   {"dh_compute_key", nasl_dh_compute_key, 0,
    {"dh_server_pub", "g", "p", "priv_key", "pub_key", NULL}},
-  {"rsa_public_encrypt", nasl_rsa_public_encrypt, 0, {"d", "data", "e", "n", "p", "q", NULL}},
+  {"rsa_public_encrypt", nasl_rsa_public_encrypt, 0,
+   {"d", "data", "e", "n", "p", "padd", "q", NULL}},
   {"rsa_public_decrypt", nasl_rsa_public_decrypt, 0, {"e", "n", "sig", NULL}},
   {"bf_cbc_encrypt", nasl_bf_cbc_encrypt, 0, {"data", "iv", "key", NULL}},
   {"bf_cbc_decrypt", nasl_bf_cbc_decrypt, 0, {"data", "iv", "key", NULL}},
